--- a/Manchester United/html/Mainpage.html
+++ b/Manchester United/html/Mainpage.html
@@ -15,8 +15,73 @@
             <img src="../img/kohler.png" style="width: 85px; height: 43px; position: relative; left: 1530px;">
         </header>
         <header class="red-header">
-            <img src="../img/manchester united.png" style="width: 90px; height: 65px; position: relative; left: 20px;">
-        </header>
+            <img src="../img/manchester united.png" style="width: 90px; height: 65px; position: relative; left: 20px; top: 1px;">
+            <ul class="menu">
+                <ul class="video">
+                    <a>비디오</a>
+                    <li>최신</li>
+                </ul>
+                <ul class="news">
+                    <a>뉴스</a>
+                    <li>최신</li>
+                    <li>뉴스 속보 알림</li>
+                </ul>
+                <ul class="shopping">
+                    <a>쇼핑</a>
+                    <li>축구 키트</li>
+                    <li>트레이닝</li>
+                    <li>남자</li>
+                    <li>여자</li>
+                    <li>어린이</li>
+                    <li>레트로 저지</li>
+                    <li>세일</li>
+                </ul>
+                <ul class="match">
+                    <a>경기</a>
+                    <li>전체</li>
+                    <li>일정 & 결과</li>
+                    <li>리그순위표</li>
+                    <li>첫번째팀</li>
+                </ul>
+                <ul class="player">
+                    <a>선수</a>
+                    <li>1군</li>
+                    <li>감독</li>
+                    <li>리져브 팀 & 아카데미</li>
+                    <li>전설적 인물</li>
+                </ul>
+                <ul class="MyUnited">
+                    <a>나의 유나이티드</a>
+                    <li>유나이티드 가입</li>
+                    <li>유나이티드 계정이 있으십니까? <a href="Login.html">여기서 로그인하기</a></li>
+                </ul>
+                <ul class="Seemore">
+                    <a>더보기</a>
+                    <ul class="history">
+                        <a>역사</a>
+                        <li>트로피 전시실</li>
+                        <li>뮌헨 참사를 기억하며</li>
+                    </ul>
+                    <ul class="Information">
+                        <a>구단정보</a>
+                        <li>브랜드 보호</li>
+                        <li>대투자자 홍보보(IR)</li>
+                        <li>기업의 사회적 책임</li>
+                    </ul>
+                    <ul class="help">
+                        <a>도움말</a>
+                        <li>접근성</li>
+                        <li>연락처</li>
+                        <li>자주 묻는 질문</li>
+                        <li>피드백</li>
+                    </ul>
+                    <ul class="partner">
+                        <a>공식 파트너</a>
+                        <li>글로벌 파트너</li>
+                    </ul>
+                </ul>
+            </ul>
+            </header>
     </header>
 </body>
 </html>
